refactor: correct driver assignment and apply related fixes